--- a/src/ui/view/ClientsView.fxml
+++ b/src/ui/view/ClientsView.fxml
@@ -9,21 +9,21 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane styleClass="page-container" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.viewController.ClientsViewController">
+<BorderPane styleClass="page-container" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ClientsController">
    <top>
-      <HBox alignment="CENTER_LEFT" spacing="10.0" styleClass="modern-container" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_LEFT" spacing="10.0" styleClass="app-container" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
             <Label text="Search:" />
-            <TextField fx:id="txtSearch" promptText="Search clients by name or phone..." styleClass="modern-field" HBox.hgrow="ALWAYS" />
-            <Button fx:id="btnNewClient" mnemonicParsing="false" styleClass="modern-button" text="+ New Client" />
+            <TextField fx:id="txtSearch" promptText="Search clients by name or phone..." styleClass="app-field" HBox.hgrow="ALWAYS" />
+            <Button fx:id="btnNewClient" mnemonicParsing="false" styleClass="app-button" text="+ New Client" />
          </children>
       </HBox>
    </top>
    <center>
-      <TableView fx:id="table" styleClass="modern-table" BorderPane.alignment="CENTER">
+      <TableView fx:id="table" styleClass="app-table" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="colId" text="ID" />
           <TableColumn fx:id="colUsername" text="Username" />
