--- a/src/ui/view/MainView.fxml
+++ b/src/ui/view/MainView.fxml
@@ -1,19 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.Insets?>
 
-<TabPane fx:id="tabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.viewController.MainViewController">
-  <tabs>
-    <Tab fx:id="clientsTab" text="Clients" />
-    <Tab fx:id="ordersTab" text="Orders" />
-    <Tab fx:id="shipmentsTab" text="Shipments" />
-    <Tab fx:id="paymentsTab" text="Payments" />
-    <Tab fx:id="dashboardTab" text="Dashboard">
-        <content>
-            <fx:include source="DashboardView.fxml" />
-        </content>
-    </Tab>
-    <Tab fx:id="settingsTab" text="Settings" />
-  </tabs>
-</TabPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainController">
+  <top>
+    <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-background-color: #f0f0f0; -fx-border-color: #cccccc; -fx-border-width: 0 0 1 0;">
+      <padding>
+        <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
+      </padding>
+      <Label text="Proxy Shopping Management System" style="-fx-font-size: 16; -fx-font-weight: bold;" />
+      <Label fx:id="userInfoLabel" text="User: " style="-fx-font-size: 12;" HBox.hgrow="ALWAYS" />
+      <Button fx:id="logoutButton" onAction="#handleLogout" text="Logout" style="-fx-font-size: 12;" />
+    </HBox>
+  </top>
+  <center>
+    <TabPane fx:id="tabPane" tabClosingPolicy="UNAVAILABLE">
+      <tabs>
+        <Tab fx:id="clientsTab" text="Clients" />
+        <Tab fx:id="ordersTab" text="Orders" />
+        <Tab fx:id="shipmentsTab" text="Shipments" />
+        <Tab fx:id="paymentsTab" text="Payments" />
+        <Tab fx:id="dashboardTab" text="Dashboard">
+            <content>
+                <fx:include source="DashboardView.fxml" />
+            </content>
+        </Tab>
+        <Tab fx:id="settingsTab" text="Settings" />
+        <Tab fx:id="adminTab" text="Admin" />
+        <Tab fx:id="logsTab" text="Logs" />
+      </tabs>
+    </TabPane>
+  </center>
+</BorderPane>
