--- a/src/ui/view/OrdersView.fxml
+++ b/src/ui/view/OrdersView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ui.viewController.OrdersViewController"
+            fx:controller="Controller.OrdersController"
             styleClass="page-container">
 
     <top>
@@ -19,12 +19,12 @@
             <ComboBox fx:id="cbStatusFilter" promptText="All"/>
             <Label text="Platform:"/>
             <ComboBox fx:id="cbPlatformFilter" promptText="All Platforms"/>
-            <Button fx:id="btnNewOrder" text="New Order" styleClass="modern-button,button-primary" onAction="#handleNewOrder"/>
+            <Button fx:id="btnNewOrder" text="New Order" styleClass="app-button,button-primary" onAction="#handleNewOrder"/>
         </HBox>
     </top>
 
     <center>
-        <TableView fx:id="ordersTable" styleClass="modern-table">
+        <TableView fx:id="ordersTable" styleClass="app-table">
             <columns>
                 <TableColumn fx:id="colId" text="ID" prefWidth="50"/>
                 <TableColumn fx:id="colClient" text="Client" prefWidth="100"/>
