--- a/src/ui/view/PaymentsView.fxml
+++ b/src/ui/view/PaymentsView.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane styleClass="page-container" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.viewController.PaymentsViewController">
+<BorderPane styleClass="page-container" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.PaymentsController">
    <top>
       <HBox spacing="10.0" styleClass="action-buttons" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnAddPayment" text="+ Add Payment" styleClass="modern-button,button-primary" />
+            <Button fx:id="btnAddPayment" text="+ Add Payment" styleClass="app-button,button-primary" />
             <Label text="Search:" />
-            <TextField fx:id="txtSearch" promptText="Search by method, comment or order ID..." styleClass="modern-field" HBox.hgrow="ALWAYS" />
+               <TextField fx:id="txtSearch" promptText="Search by method, comment or order ID..." styleClass="app-field" HBox.hgrow="ALWAYS" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -23,7 +23,7 @@
       </HBox>
    </top>
    <center>
-      <TableView fx:id="paymentsTable" styleClass="modern-table" BorderPane.alignment="CENTER">
+      <TableView fx:id="paymentsTable" styleClass="app-table" BorderPane.alignment="CENTER">
          <columns>
             <TableColumn fx:id="colPayId" text="ID" />
             <TableColumn fx:id="colOrderId" text="Order ID" />
